adding new test cases

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sarah\AppData\Local\Temp\testng-eclipse-363326279\testng-customsuite.xml</span>
+                    <span>C:\Users\sarah\AppData\Local\Temp\testng-eclipse-267009329\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases" class="method navigator-link" hash-for-method="checkDepartureandReturnDates">checkDepartureandReturnDates</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases" class="method navigator-link" hash-for-method="checkHotelsTab">checkHotelsTab</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases" class="method navigator-link" hash-for-method="checkReservation">checkReservation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases" class="method navigator-link" hash-for-method="clickonSearch">clickonSearch</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +137,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="checkDepartureandReturnDates">
-                  </a> <!-- checkDepartureandReturnDates -->
-                  <span class="method-name">checkDepartureandReturnDates</span>
+                  <a name="checkHotelsTab">
+                  </a> <!-- checkHotelsTab -->
+                  <span class="method-name">checkHotelsTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkReservation">
+                  </a> <!-- checkReservation -->
+                  <span class="method-name">checkReservation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickonSearch">
+                  </a> <!-- clickonSearch -->
+                  <span class="method-name">clickonSearch</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarah\AppData\Local\Temp\testng-eclipse-363326279\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sarah\AppData\Local\Temp\testng-eclipse-267009329\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkDepartureandReturnDates')
+data.setCell(0, 1, 'clickonSearch')
 data.setCell(0, 2, 'MyTestCases')
-data.setCell(0, 3, 115);
+data.setCell(0, 3, 2882);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'checkHotelsTab')
+data.setCell(1, 2, 'MyTestCases')
+data.setCell(1, 3, 1014);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'checkReservation')
+data.setCell(2, 2, 'MyTestCases')
+data.setCell(2, 3, 62);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 115 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,19 +242,23 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">7 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">MyTestCases</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">checkHotelsTabIsNotSelected</span>
-                <br/>
                 <span class="ignored-method-name">checkLangauge</span>
+                <br/>
+                <span class="ignored-method-name">checkHotelsTabIsNotSelected</span>
                 <br/>
                 <span class="ignored-method-name">checkMobileNumber</span>
                 <br/>
+                <span class="ignored-method-name">checkDepartureandReturnDates</span>
+                <br/>
                 <span class="ignored-method-name">checkCurrency</span>
+                <br/>
+                <span class="ignored-method-name">checkLanguageIsSelectedRandomly</span>
                 <br/>
                 <span class="ignored-method-name">checkQitafLogo</span>
                 <br/>
@@ -242,8 +278,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">checkDepartureandReturnDates</span>
-                <span class="method-start">4488 ms</span>
+                <span class="method-name">checkHotelsTab</span>
+                <span class="method-start">4740 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkReservation</span>
+                <span class="method-start">5755 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickonSearch</span>
+                <span class="method-start">5817 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
