--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="76aeea">  <td>24/07/04 20:38:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.checkDepartureandReturnDates()[pri:6, instance:MyTestCases@3a3e78f]">checkDepartureandReturnDates</td> 
+<tr bgcolor="76aeea">  <td>24/07/07 22:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.checkReservation()[pri:9, instance:MyTestCases@c5dc4a2]">checkReservation</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="76aeea">  <td>24/07/04 20:38:30</td>   <td>-4484</td> <td>&nbsp;</td><td title="&gt;&gt;MyTestCases.mySetup()[pri:0, instance:MyTestCases@3a3e78f]">&gt;&gt;mySetup</td> 
+<tr bgcolor="76aeea">  <td>24/07/07 22:57:59</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.clickonSearch()[pri:10, instance:MyTestCases@c5dc4a2]">clickonSearch</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="76aeea">  <td>24/07/07 22:57:58</td>   <td>-1015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTestCases.checkHotelsTab()[pri:8, instance:MyTestCases@c5dc4a2]">checkHotelsTab</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="76aeea">  <td>24/07/07 22:57:53</td>   <td>-5753</td> <td>&nbsp;</td><td title="&gt;&gt;MyTestCases.mySetup()[pri:0, instance:MyTestCases@c5dc4a2]">&gt;&gt;mySetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
